--- a/Food Recipe/App.xaml
+++ b/Food Recipe/App.xaml
@@ -3,7 +3,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Food_Recipe"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AddRecipe.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
