--- a/Food Recipe/HomeScreen.xaml
+++ b/Food Recipe/HomeScreen.xaml
@@ -31,7 +31,7 @@
                     Orientation="Horizontal" HorizontalAlignment="Center">
 
                 <Border BorderThickness="2" CornerRadius="3" BorderBrush="#B8B8B8">
-                    <TextBox x:Name="SearchTextBox" KeyDown="TextBox_KeyDown" PreviewTextInput="TextBox_PreviewTextInput" 
+                    <TextBox x:Name="SearchTextBox" KeyDown="TextBox_KeyDown" KeyUp="SearchTextBox_KeyUp"
                              materialDesign:HintAssist.Hint="Tìm món ăn ở đây" Background="#EDEDED" 
                              Width="350" Height="45" Padding="2,2,2,2" FontSize="21"/>
                 </Border>
